# VibeProjects

./: .gitignore
AgentAnalyzer/: claude.md  index.html
AgentAnalyzer/config/: app-config.json
AgentAnalyzer/css/: fluent-overrides.css  (+1 more)
AgentFlash/: Claude.md  agent.html  config.js  index.html
AutoCADDiagrams/: .env copy.example  README.md  claude.md  requirements.txt  setup.py  test_architecture.docx
CAKE Tool/: CAKE-Tool.ps1  CAKE-Tool2.ps1  Connect-MSGraph.ps1  Create-TVShow-Excel.py  Get-SPOFilesRecursivelly.js  Ingest-EdgarFiles copy.ps1  Ingest-EdgarFiles.ps1  Ingest-EdgarFilesFromCSV.ps1  SPO-GetFiles.js  def_filings.csv  def_filings2.csv  def_filings_all.csv  items.xml  processed_ids.txt
FindTime/: find-availability.ps1
MCS DA to SPO Agent/: Convert-MCSAgentToSPOAgent.ps1  Convert-MCSAgentToSPOAgent.txt  README.md  claude.md
ReduceMeetings/: Claude.md  README.md  index.html
SEC-Connector/: .gitignore  COMPARISON.md  SEC_Copilot_Connector.pptx  SETUP_GUIDE.md  claude.md  pyproject.toml  test_filing.py
SEC-Connector/.claude/: settings.local.json
SEC-Connector/config/: config.yaml  schema.json
SEC-Connector/docs/: SETUP_GUIDE.md
SEC-Connector/src/sec_connector/: __init__.py  __main__.py  chunker.py  cli.py  config.py  graph_client.py  models.py  parser.py  pipeline.py  sec_client.py  state_manager.py  utils.py
SEC-Connector/tests/: __init__.py  test_chunker.py  test_models.py  test_parser.py
copilot-agent-scanner/: .gitignore  DEVELOPMENT.md  README.md  setup-dev.ps1
misc/: check-validacroform.py  converted_form.docx  pdf_form_to_word.py
(+98 files in other folders)
