[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sec-connector"
version = "1.0.0"
description = "Microsoft Copilot Connector for SEC EDGAR filings"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "SEC Connector Team"}
]
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "aiohttp>=3.9.0",
    "msal>=1.24.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "markdownify>=0.11.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "tenacity>=8.2.0",
    "pyyaml>=6.0.0",
    "aiosqlite>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
sec-connector = "sec_connector.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sec_connector"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
